replace postgresql by MongoDB and add /user on Backend API to test this BDD
