# frontend-web/src/app/api/model/errorResponse.ts
@@ -1,0 +1,15 @@
+/**
+ * Rekor API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface ErrorResponse { 
+    message: string;
+}
+
