# frontend-web/src/app/api/model/models.ts
@@ -1,1 +1,4 @@
+export * from './errorResponse';
 export * from './healthResponse';
+export * from './user';
+export * from './userInput';
